feat:구글 폰트 적용

--- a/ts-portfolio/public/index.html
+++ b/ts-portfolio/public/index.html
@@ -15,6 +15,10 @@
       src="https://kit.fontawesome.com/43607c6dc7.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Minwoo portfolio</title>
   </head>
   <body>
